# OreStudio

./: .build-manual.el  .build-plan.el  .build-settings.el  .build-site.el  .build-skills.el  .build-tasks.el  .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gitattributes  .gitignore  .misspell-fixer.ignore  .misspell-fixer.json  404.org  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CTest.cmake  CTestConfig.cmake  CTestCustom.cmake  CTestSite.cmake  README.md  bibliography.bib  compass.sh  index.org  notes.org  readme.org  vcpkg-configuration.json  vcpkg.json
projects/: CMakeLists.txt  ores.hpp  ores.hpp.in
projects/deepseek/: CMakeLists.txt  main.cpp
projects/lisp/: ores-client-mode.el  ores-client-shell.el  ores-database.el  ores-prodigy.el  ores-shell-mode.el  ores-shell.el  setup-prodigy.el
projects/modeling/: CMakeLists.txt  applied_masd.org  architectural_philosophy.org  architecture_layers.puml  assets_facet.org  build_facet.org  claude_code_skills.org  cli_facet.org  component_architecture.org  country.org  currency.org  documentation_facet.org  entity_catalogue.org  entity_lifecycle.org  http_facet.org  masd.org  messaging.org  ores.puml  protocol.org  protocol.session.puml  qt_facet.org  qt_ui_patterns.org  service_facet.org  service_registry.org  shell_facet.org  sql_facet.org  system_model.org  system_model_application.org  system_model_domain.org  system_model_foundation.org  system_model_infrastructure.org  system_model_tooling.org  technical_space_cpp.org  technical_space_sql.org  technical_spaces.org  technical_spaces_other.org  type_definition_facet.org  variability_model.org  wt_facet.org
projects/ores.accounts/: CMakeLists.txt  ores.accounts.hpp
projects/ores.accounts.tests/: CMakeLists.txt  domain_account_tests.cpp  domain_feature_flags_tests.cpp  domain_logins_tests.cpp  main.cpp  messaging_accounts_message_handler_tests.cpp  messaging_protocol_tests.cpp  repository_account_repository_tests.cpp  repository_helper.cpp  repository_helper.hpp  security_password_manager_tests.cpp  service_account_service_tests.cpp
projects/ores.analytics.quant/: CMakeLists.txt
projects/ores.assets.api/: CMakeLists.txt
projects/ores.cli/: CMakeLists.txt  application.cpp  application.hpp  configuration.cpp  configuration.hpp  dumping_configuration.cpp  dumping_configuration.hpp  importing_configuration.cpp  importing_configuration.hpp  main.cpp  ores.cli.hpp  ores.console.hpp  parser_exception.hpp  program_options_parser.cpp  program_options_parser.hpp
projects/ores.cli.test/: CMakeLists.txt  parser_tests.cpp  tests.cpp
projects/ores.cli.tests/: CMakeLists.txt  app_application_import_tests.cpp  main.cpp  parser_tests.cpp
projects/ores.client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
projects/ores.codegen/: QWEN.md  README.md  codegen.py  codegen.sh  doc_list.sh  doc_show.sh  docs_exceptions.txt  generate_crypto_refdata.sh  generate_doc.sh  generate_dq_schema.sh  generate_flags_refdata.sh  generate_fpml_refdata.sh  generate_ip2country_refdata.sh  generate_refdata_schema.sh  generate_slovaris.sh  generate_solvaris_refdata.sh  generate_trade_schema.sh  generate_trading_instruments.sh  generate_v2_doc.sh  generate_workflow_schema.sh  generate_workspace_entities.sh  ores.codegen.org  plantuml_er_generate.sh  requirements.txt  run_generator.sh  validate_docs.py  validate_docs.sh
projects/ores.comms/: CMakeLists.txt  client.cpp  client.hpp  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp  service.cpp  service.hpp  session.cpp  session.hpp
projects/ores.comms.service/: CMakeLists.txt
projects/ores.comms.tests/: CMakeLists.txt  catch2_poc_test.cpp  frame_tests.cpp  main.cpp
projects/ores.compass/: compass.sh  requirements.txt
projects/ores.console/: CMakeLists.txt  application.cpp  application.hpp  configuration.cpp  configuration.hpp  dumping_configuration.cpp  dumping_configuration.hpp  importing_configuration.cpp  importing_configuration.hpp  main.cpp  ores.console.hpp  parser_exception.hpp  program_options_parser.cpp  program_options_parser.hpp
projects/ores.core/: CMakeLists.txt  ores.core.hpp
projects/ores.core.test/: CMakeLists.txt  main.cpp  tests.cpp
projects/ores.dq/: CMakeLists.txt
projects/ores.eventing/: CMakeLists.txt
projects/ores.iam.client/: CMakeLists.txt
projects/ores.lisp/: ores-babel.el  ores-dashboard.el  ores-database.el  ores-db.el  ores-env.el  ores-org-roam-export.el  ores-prodigy.el  ores-shell.el
projects/ores.logging/: CMakeLists.txt
projects/ores.marketdata.core/: CMakeLists.txt
projects/ores.mq/: CMakeLists.txt
projects/ores.mq.broker/: CMakeLists.txt
projects/ores.notification/: CMakeLists.txt
projects/ores.ore/: CMakeLists.txt  ores.ore.hpp
projects/ores.ore.test/: CMakeLists.txt  main.cpp  tests.cpp
projects/ores.qt/: AboutDialog.cpp  AboutDialog.ui  CMakeLists.txt  ClientCurrencyModel.cpp  ClientCurrencyModel.hpp  CurrencyDetailPanel.cpp  CurrencyDetailPanel.hpp  CurrencyDetailPanel.ui  CurrencyEditDialog.cpp  CurrencyEditDialog.hpp  CurrencyEditDialog.ui  CurrencyHistoryDialog.cpp  CurrencyHistoryDialog.hpp  CurrencyHistoryDialog.ui  CurrencyHistoryMdiWindow.cpp  CurrencyHistoryMdiWindow.hpp  CurrencyMdiWindow.cpp  CurrencyMdiWindow.hpp  CurrencyModel.cpp  CurrencyModel.hpp  CurrencyModel2.cpp  CurrencyModel2.hpp  CurrencyTab.cpp  CurrencyTab.hpp  CurrencyTabPage.cpp  CurrencyTabPage.hpp  CurrencyTableView.ui  DetachableMdiSubWindow.cpp  DetachableMdiSubWindow.hpp  LoginDialog.cpp  LoginDialog.hpp  MainTab.cpp  MainTab.hpp  MainTabWidget.cpp  MainTabWidget.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MdiAreaWithBackground.cpp  MdiAreaWithBackground.hpp  (+8 more)
projects/ores.qt.workspace/: CMakeLists.txt
projects/ores.refdata/: CMakeLists.txt
projects/ores.risk.test/: CMakeLists.txt  main.cpp  orexml_currency_config_tests.cpp  tests.cpp
projects/ores.risk.tests/: CMakeLists.txt  domain_currency_tests.cpp  main.cpp  messaging_protocol_tests.cpp  messaging_risk_message_handler_tests.cpp  orexml_currency_config_tests.cpp  (+3 more)
(+26803 files in other folders)
